add example backbone app

--- a/example.html
+++ b/example.html
@@ -146,12 +146,52 @@
         </div>
       </div>
     </div>
-  </body>
 
+    <br><br>
+    <div class="row">
+      <div class="container">
+        <p>Notice how each dot is really a Font Awesome icon inside a div.</p>
+        <p>These divs that hold dots have three classes:</p>
+        <ul>
+          <li>row</li>
+          <li>dot</li>
+          <li>*color*</li>
+        </ul>
+        <p>There are five colors:</p>
+        <ul>
+          <li>blue</li>
+          <li>green</li>
+          <li>purple</li>
+          <li>red</li>
+          <li>yellow</li>
+        </ul>
+        <p>Each column of dots is inside a div with these three classes:</p>
+        <ul>
+          <li>col-xs-2</li>
+          <li>col-sm-2</li>
+          <li>col-md-2</li>
+        </ul>
+        <p>All the columns are inside of a div with two classes:</p>
+        <ul>
+          <li>row</li>
+          <li>board</li>
+        <ul>
+        <p>And finally, this container for all the columns is also inside a div, this outermost div has three classes:</p>
+        <ul>
+          <li>col-md-6</li>
+          <li>col-md-offset-3</li>
+          <li>noselect</li>
+        </ul>
+        <p>This outermost container also has one id:</p>
+        <ul>
+          <li>board</li>
+        </ul>
+      </div>
+    </div>
+  
+  </body>
   <script src="public/lib/jquery/jquery.min.js"></script>
   <script src="public/lib/underscore/underscore.min.js"></script>
   <script src="public/lib/backbone/backbone.min.js"></script>
   <script src="public/lib/bootstrap/bootstrap.min.js"></script>
-  <script src="public/javascripts/two-dots.js"></script>
-
 </html>
