Add info to example.html about Bootstrap classes and clarify copy.

--- a/example.html
+++ b/example.html
@@ -150,41 +150,41 @@
     <br><br>
     <div class="row">
       <div class="container">
-        <p>Notice how each dot is really a Font Awesome icon inside a div.</p>
-        <p>These divs that hold dots have three classes:</p>
+        <p>If you Inspect Element on the group of dots above, you'll notice how each dot is really a Font Awesome icon inside a div.</p>
+        <p>The divs that hold individual dots have three classes:</p>
         <ul>
-          <li>row</li>
-          <li>dot</li>
-          <li>*color*</li>
+          <li>"row"</li>
+          <li>"dot"</li>
+          <li>dot color, ex: "red"</li>
         </ul>
         <p>There are five colors:</p>
         <ul>
-          <li>blue</li>
-          <li>green</li>
-          <li>purple</li>
-          <li>red</li>
-          <li>yellow</li>
+          <li>"blue"</li>
+          <li>"green"</li>
+          <li>"purple"</li>
+          <li>"red"</li>
+          <li>"yellow"</li>
         </ul>
-        <p>Each column of dots is inside a div with these three classes:</p>
+        <p>Each column of dots is inside a div with these three classes, which are Bootstrap classes (for more information on these classes, check out <a>Bootstrap grid examples</a href="http://getbootstrap.com/examples/grid/">:</p>
         <ul>
-          <li>col-xs-2</li>
-          <li>col-sm-2</li>
-          <li>col-md-2</li>
+          <li>"col-xs-2"</li>
+          <li>"col-sm-2"</li>
+          <li>"col-md-2"</li>
         </ul>
         <p>All the columns are inside of a div with two classes:</p>
         <ul>
-          <li>row</li>
-          <li>board</li>
+          <li>"row"</li>
+          <li>"board"</li>
         <ul>
         <p>And finally, this container for all the columns is also inside a div, this outermost div has three classes:</p>
         <ul>
-          <li>col-md-6</li>
-          <li>col-md-offset-3</li>
-          <li>noselect</li>
+          <li>"col-md-6"</li>
+          <li>"col-md-offset-3"</li>
+          <li>"noselect"</li>
         </ul>
         <p>This outermost container also has one id:</p>
         <ul>
-          <li>board</li>
+          <li>"board"</li>
         </ul>
       </div>
     </div>
