Forgot how to write an a tag.

--- a/example.html
+++ b/example.html
@@ -165,7 +165,7 @@
           <li>"red"</li>
           <li>"yellow"</li>
         </ul>
-        <p>Each column of dots is inside a div with these three classes, which are Bootstrap classes (for more information on these classes, check out <a>Bootstrap grid examples</a href="http://getbootstrap.com/examples/grid/">:</p>
+        <p>Each column of dots is inside a div with these three classes, which are Bootstrap classes (for more information on these classes, check out <a href="http://getbootstrap.com/examples/grid/">Bootstrap grid examples</a>:</p>
         <ul>
           <li>"col-xs-2"</li>
           <li>"col-sm-2"</li>
